--- a/components/header.html
+++ b/components/header.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Header Component</title>
-    <link rel="stylesheet" href="../styles/daotao.css">
+    <link rel="stylesheet" href="../styles/components.css">
     <style>
         /* Reset cho component */
         * {
@@ -37,26 +37,47 @@
 </head>
 <body>
     <!-- Header Component -->
-    <header class="header">
-        <div class="viet-logo">
-            <img src="../assets/khkttt_logo_vn.png" alt="Logo Trường Đại học UIT">
-        </div>
-        
-        <nav class="nav-menu">
-            <div class="nav-item">Giới thiệu</div>
-            <div class="nav-item">Bộ môn</div>
-            <div class="nav-item">Nghiên cứu</div>
-            <div class="nav-item">Tin tức</div>
-            <div class="nav-item">Phòng thực hành</div>
-            <div class="nav-item">Công nghệ</div>
-            <div class="nav-item">Liên hệ</div>
-        </nav>
-        
-        <div class="vietnam-flag">
-            <!-- Tạm thời ẩn flag vì chưa có file hình ảnh -->
-            <!-- <img src="../assets/vietnam-flag.png" alt="Vietnam Flag"> -->
-        </div>
-    </header>
+<header class="header"> <!-- Khung Header -->
+    <div style="width: 200px; height: 100px; flex-direction: column; justify-content: flex-start; align-items: flex-start; gap: 10px; display: inline-flex">
+        <img style="width: 200px; height: 100px" src="logo.png">
+    </div>
+    <div class="rHeader">
+        <ul class="navbar">
+            <li class="navigation"><a class="nav-name" href="#">Giới thiệu</a></li>
+            <li class="navigation">
+                <a href="#" class="nav-name">Đào tạo</a>
+                <ul class="dropdown-menu">
+                    <li class="nav-item"><a href="#" class="dropdown-item">Bậc Đại học</a></li>
+                    <li class="nav-item"><a href="#" class="dropdown-item">Sau Đại học</a></li>
+                </ul>
+            </li>
+            <li class="navigation">
+                <a href="#" class="nav-name">Tuyển sinh</a>
+                <ul class="dropdown-menu">
+                    <li class="nav-item"><a href="#" class="dropdown-item">Bậc Đại học</a></li>
+                    <li class="nav-item"><a href="#" class="dropdown-item">Sau Đại học</a></li>
+                </ul>
+            </li>
+            <li class="navigation">
+                <a href="#" class="nav-name">Tin tức</a>
+                <ul class="dropdown-menu">
+                    <li class="nav-item"><a href="#" class="dropdown-item">Tin Học vụ</a></li>
+                    <li class="nav-item"><a href="#" class="dropdown-item">Tin Tốt nghiệp</a></li>
+                    <li class="nav-item"><a href="#" class="dropdown-item">Tin Tuyển dụng</a></li>
+                    <li class="nav-item"><a href="#" class="dropdown-item">Tin Khoa học - Công nghệ</a></li>
+                    <li class="nav-item"><a href="#" class="dropdown-item">Tin Cựu học viên</a></li>
+                    <li class="nav-item"><a href="#" class="dropdown-item">Tin khác</a></li>
+                </ul>
+            </li>
+            <li class="navigation"><a href="#" class="nav-name">Khoa học - Công nghệ</a></li>
+            <li class="navigation"><a href="#" class="nav-name">Liên hệ</a></li>
+        </ul>
+    </div>
+    <div style="padding: 10px; justify-content: center; align-items: center; gap: 10px; display: flex">
+        <img src="flag.svg" style="width: 32px; height:32px">
+    </div>
+</header>
+</div>
 
     <script>
         // Tự động điều chỉnh chiều cao cho parent object
