Change about picture's href and write some comments.

--- a/components/header.html
+++ b/components/header.html
@@ -37,10 +37,12 @@
 </head>
 <body>
     <!-- Header Component -->
-<header class="header"> <!-- Khung Header -->
+<header class="header">
+    <!--Logo Khoa Khoa học và Kỹ thuật thông tin-->
     <div style="width: 200px; height: 100px; flex-direction: column; justify-content: flex-start; align-items: flex-start; gap: 10px; display: inline-flex">
-        <img style="width: 200px; height: 100px" src="logo.png">
+        <img style="width: 200px; height: 100px" src="assets/khkttt_logo_vn.png">
     </div>
+    <!--Thanh điều hướng-->
     <div class="rHeader">
         <ul class="navbar">
             <li class="navigation"><a class="nav-name" href="#">Giới thiệu</a></li>
@@ -73,8 +75,9 @@
             <li class="navigation"><a href="#" class="nav-name">Liên hệ</a></li>
         </ul>
     </div>
+    <!--Lá cờ Việt Nam dùng để chuyển ngôn ngữ (Phát triển thêm)-->
     <div style="padding: 10px; justify-content: center; align-items: center; gap: 10px; display: flex">
-        <img src="flag.svg" style="width: 32px; height:32px">
+        <img src="assets/flag.svg" style="width: 32px; height:32px">
     </div>
 </header>
 </div>
