Changes on KHCN tab

--- a/components/header.html
+++ b/components/header.html
@@ -1,7 +1,7 @@
 <header class="header">
     <!-- Logo Khoa Khoa học và Kỹ thuật thông tin -->
     <div style="width: 200px; height: 100px; flex-direction: column; justify-content: flex-start; align-items: flex-start; gap: 10px; display: inline-flex">
-        <img style="width: 200px; height: 100px" src="../assets/header-logo.png" alt="Logo Khoa KH-KTTT">
+        <img style="width: 200px; height: 100px" src="../../assets/header-logo.png" alt="Logo Khoa KH-KTTT">
     </div>
     
     <!-- Thanh điều hướng -->
